package DED.Entite;

public class Elfe extends Race{

    public Elfe(String nom, Integer vie, Integer force, Integer dexterite, Integer vitesse, Integer initiative) {
        super(nom, "Elfe", vie, force, dexterite, vitesse, initiative);
    }
}
