package DED.Entite;

public class Humain extends Race{

    public Humain(String nom, Integer vie, Integer force, Integer dexterite, Integer vitesse, Integer initiative) {
        super(nom, "Humain", vie, force, dexterite, vitesse, initiative);
    }
}
