package DED.Entite;

public class Nain extends Race {

    public Nain(String nom, Integer vie, Integer force, Integer dexterite, Integer vitesse, Integer initiative) {
        super(nom, "Nain", vie, force, dexterite, vitesse, initiative);
    }
}
