package ded.entite;

public class Clerc extends Classe{
    public Clerc(String nom){
        super(nom, 16);
    }
}
