package ded.entite;

public class Espece {

    private String m_nom;
    public Espece(String nom) {this.m_nom = nom;}
    public String getNom(){return this.m_nom;}
}
