@startuml
'https://plantuml.com/class-diagram
scale 1

skinparam style strictuml
hide empty members
skinparam classFontStyle Bold

package ded {
    package affichage {
        class AffichageMiseEnPlace {
            - {static} m_scanner : Scanner
            - {static} lstPersonnage : ArrayList<Personnage>
            + {static} metreEnPlacePersonnage()
            + {static} creerDonjon() : Donjon
            + {static} metreEnPlaceDonjon() : Donjon
            + {static} clearTerminalDonjon(donjon: Donjon)
            # {static} choisirRace() : Race
            # {static} choisirClasse() : Classe
            # {static} ajouterElements(donjon: Donjon, lstEspece: ArrayList<Espece>)
            # {static} ajouterEquipement(donjon: Donjon)
            # {static} placerPersonnages(donjon: Donjon) : Donjon
            # {static} demanderCoordonnees() : int[]
            # {static} mettreEnPlaceObstacle(donjon: Donjon) : int[]
            # {static} mettreEnPlaceArme(donjon: Donjon) : Equipement
            # {static} mettreEnPlaceArmure(donjon: Donjon) : Equipement
            # {static} mettreEnPlaceMonstre(donjon: Donjon, lstEspece: ArrayList<Espece>) : Entite
            # {static} demanderStats() : int[]
            # {static} mettreEnPlaceEspece(lstEspece: ArrayList<Espece>) : Espece
            # {static} choisirParmisEspece(lstEspece: ArrayList<Espece>) : Espece
            # {static} choisirEspece(lstEspece: ArrayList<Espece>) : Espece
        }

        class AffichageTour {
            - {static} m_scanner : Scanner
            + {static} afficherDonjon(donjon: Donjon, nDonjon: Integer)
            + {static} afficherAcionPrecedente(commentaireActionPrecedente: String)
            + {static} afficherAction(entite: Entite, estMagicien: Boolean, estClerc: Boolean)
            + {static} attaquer(donjon: Donjon, entite: Entite) : String
            + {static} deplacer(donjon: Donjon, entite: Entite) : String
            + {static} equiper(personnage: Personnage) : String
            + {static} recuperer(donjon: Donjon, personnage: Personnage) : String
            + {static} guerison(donjon: Donjon, entite: Entite) : String
            + {static} armeMagique(donjon: Donjon, entite: Entite) : String
            + {static} boogieWoogie(donjon: Donjon) : String
            + {static} actionMj(donjon: Donjon, entite: Entite)
            + {static} mjAjouterObstacle(donjon: Donjon)
            + {static} mjInfligerDegat(entite: Entite)
            + {static} mjDeplacerEntite(donjon: Donjon, entite: Entite)
            # {static} obtenirChoixUtilisateur(min: Integer, max: Integer) : Integer
            # {static} obtenirCoordonnees() : int[]
            # {static} demanderNombre(message: String) : Integer
            # {static} demanderPorteeAttaque() : Integer
            # {static} demanderDesDegats() : int[]
            + {static} affichageStats(entite: Entite)
            + {static} affichageInventaire(personnage: Personnage)
            + {static} afficherErreur(message: String)
            + {static} clearTerminalDonjon(donjon: Donjon)
        }
    }

    package donjon {
        class Donjon {
            - m_lstEntite : ArrayList<Entite>
            - m_lstEquipement : ArrayList<Equipement>
            - m_lstObstacle : ArrayList<int[]>
            - m_donjon : String[][]
            - m_dimensionMap : int[]
            - m_finDonjon : Boolean
            + <<create>> Donjon()
            + <<create>> Donjon(dimensionMap: int[])
            + <<create>> Donjon(lstEntite: ArrayList<Entite>, lstEquipement: ArrayList<Equipement>, lstObstacles: ArrayList<int[]>, dimensionMap: int[])
            + getDonjon() : String
            + genererDonjon()
            + addEntitee(entite: Entite)
            + addEquipement(equipement: Equipement)
            + addObstacles(coo: int[])
            + verfifierCoo(coo: int[]) : Boolean
            + touche(portee: Integer, coo1: int[], coo2: int[]) : Boolean
            + isFinDonjon() : Boolean
            + supprimerEquipement(equipement: Equipement)
            + supprimerMonstre()
            + deplacerDirection(entite: Entite, direction: int[], distance: Integer) : Boolean
            + getDimensionMap() : int[]
            + setDiemensionMap(dimensionMap: int[])
            + getLstEntite() : ArrayList<Entite>
            + setLstEntite(lstEntite: ArrayList<Entite>)
            + getOrdreEntite() : ArrayList<Entite>
            + getCaseEntite(coo: int[]) : Entite
            + getCaseEquipement(coo: int[]) : Equipement
        }

        class DonjonParDefault {
            + {static} getDonjonParDefault1() : Donjon
            + {static} getDonjonParDefault2() : Donjon
            + {static} getDonjonParDefault3() : Donjon
        }
    }

    package entite {
        abstract class Entite <<abstract>> {
            - m_nom : String
            - m_coo : int[]
            - m_vie : Integer
            - m_vitesse : Integer
            - m_force : Integer
            - m_dexterite : Integer
            - m_initiative : Integer
            - m_classeArmure : Integer
            - m_portee : Integer
            + <<create>> Entite(nom: String, coo: int[], stats: int[])
            + setDegat(degat: Integer)
            + setAttaque(degat: Integer) : Boolean
            + getDexterite() : Integer
            + getForce() : Integer
            + getVitesse() : Integer
            + getVie() : Integer
            + getClasseArmure() : Integer
            + getPortee() : Integer
            + getNom() : String
            + setCoo(coo: int[])
            + getCoo() : int[]
            + getInitiative() : Integer
        }

        class Espece {
            - m_nom : String
            + <<create>> Espece(nom: String)
            + getNom() : String
        }

        class Monstre extends Entite {
            - m_espece : Espece
            + <<create>> Monstre(nom: String, coo: int[], espece: Espece, classeA: Integer, stats: int[])
            + getClasseArmure() : Integer
            + getEspece() : Espece
            + getAttaque(portee: Integer, degat: int[]) : Integer
            + getDegat(degat: int[]) : Integer
        }

        class Personnage extends Entite {
            - m_armeEquipe : Optional<Arme>
            - m_armureEquipe : Optional<Armure>
            - m_inventaire : ArrayList<Equipement>
            - m_classe : Classe
            - m_race : Race
            + <<create>> Personnage(nom: String, coo: int[], classe: Classe, race: Race)
            + getAttaque() : Integer
            + getDegat() : Integer
            + recupererEquipement(equipement: Equipement)
            + equiperEquipement(index: Integer)
            + getClasse() : Classe
            + getClasseArmureEquipe() : Integer
            + getPorteeArmeEquipe() : Integer
            + getArmeEquipe() : Arme
            + getArmureEquipe() : Armure
            + getInventaire() : ArrayList<Equipement>
            + getVitesse() : Integer
            + guerison(pv: Integer)
        }

        package classe {
            abstract class Classe <<abstract>> {
                - m_nom : String
                - m_vie : Integer
                - m_lstEquipement : ArrayList<Equipement>
                + <<create>> Classe(vie: Integer)
                + getVie() : Integer
                + getEquipement() : ArrayList<Equipement>
            }

            class Clerc extends Classe {
                + <<create>> Clerc()
            }

            class Guerrier extends Classe {
                + <<create>> Guerrier()
            }

            class Magicien extends Classe {
                + <<create>> Magicien()
            }

            class Roublard extends Classe {
                + <<create>> Roublard()
            }
        }

        package race {
            class Humain {
                + <<create>> Humain()
            }

            class Elfe {
                + <<create>> Elfe()
            }

            class Halfelin {
                + <<create>> Halfelin()
            }

            class Nain {
                + <<create>> Nain()
            }
        }
    }

    package objet {
        abstract class Equipement <<abstract>> {
            - m_nom : String
            - m_ralentissement : Integer
            - m_coo : Optional<int[]>
            + <<create>> Equipement(nom: String, coo: int[])
            + getNom() : String
            + getRalentissement() : Integer
            + setCoo(coo: int[])
            + getCoo() : int[]
        }

        class Arme extends Equipement {
            - m_degat : int[]
            - m_portee : Integer
            - m_force : Integer
            - m_bonusMagique : Integer
            - m_type : Type
            + <<create>> Arme(nom: String, coo: int[], type: Type, degat: int[], portee: Integer)
            + getDegat() : int[]
            + getPortee() : Integer
            + getType() : Type
            + getBonusMagique() : Integer
            + addBonusMagique()
        }

        class Armure extends Equipement {
            - m_classe : Integer
            - m_type : Type
            + <<create>> Armure(nom: String, coo: int[], type: Type, classe: Integer)
            + getClasse() : Integer
            + getType() : Type
        }
    }

    class Des {
        - {static} jetD : Random
        + {static} lancer(faces: Integer) : Integer
        + {static} lancerMulti(nbDes: Integer, faces: Integer) : Integer
        + {static} lancerBonus(nbDes: Integer, faces: Integer, bonus: Integer) : Integer
    }
}

' Relations
AffichageMiseEnPlace ..> Personnage : <<uses>>
AffichageMiseEnPlace ..> Donjon : <<uses>>
AffichageMiseEnPlace ..> DonjonParDefault : <<uses>>
AffichageMiseEnPlace ..> Equipement : <<uses>>
AffichageMiseEnPlace ..> Arme : <<uses>>
AffichageMiseEnPlace ..> Armure : <<uses>>
AffichageMiseEnPlace ..> Espece : <<uses>>

AffichageTour ..> Donjon : <<uses>>
AffichageTour ..> Entite : <<uses>>
AffichageTour ..> Personnage : <<uses>>
AffichageTour ..> Monstre : <<uses>>
AffichageTour ..> Equipement : <<uses>>
AffichageTour ..> Arme : <<uses>>
AffichageTour ..> Armure : <<uses>>
AffichageTour ..> Des : <<uses>>

Donjon "1" *--> "*\n-m_lstEntite" Entite : contient >
Donjon "1" *--> "*\n-m_lstEquipement" Equipement : contient >
Donjon "1" *--> "*\n-m_lstObstacle" int[] : contient >

DonjonParDefault ..> Donjon : <<uses>>
DonjonParDefault ..> Entite : <<uses>>
DonjonParDefault ..> Monstre : <<uses>>
DonjonParDefault ..> Espece : <<uses>>
DonjonParDefault ..> Equipement : <<uses>>
DonjonParDefault ..> Arme : <<uses>>
DonjonParDefault ..> Armure : <<uses>>

Entite <|-- Personnage
Entite <|-- Monstre

Personnage *-> "1\n-m_classe" Classe : a pour classe >
Personnage *-> "1\n-m_race" Race : a pour race >
Personnage o-> "*\n-m_inventaire" Equipement : possède >
Personnage o-> "0..1\n-m_armeEquipe" Arme : équipée >
Personnage o-> "0..1\n-m_armureEquipe" Armure : équipée >

Monstre *-> "1\n-m_espece" Espece : est de type >

Equipement <|-- Arme
Equipement <|-- Armure

Arme "1" *--> "1\n-m_type" Arme.Type : est de type >
Armure "1" *--> "1\n-m_type" Armure.Type : est de type >

Classe <|-- Clerc
Classe <|-- Guerrier
Classe <|-- Magicien
Classe <|-- Roublard

Race <|-- Humain
Race <|-- Elfe
Race <|-- Halfelin
Race <|-- Nain
}

@enduml